--- a/_posts/2017-05-17-sublime.md
+++ b/_posts/2017-05-17-sublime.md
@@ -1,10 +1,15 @@
 ---
 layout: post
-title:  "sublime编辑器"
+title:  "Sublime Text 3 编辑器"
 date:   2017-05-17 12:00:10 +0800
 categories: jekyll update
 ---
 
-http://feliving.github.io/Sublime-Text-3-Documentation/index.html
 
-### 欢迎补充
+[Sublime Text 3][Sublime-Text-3]
+
+> 欢迎补充
+
+
+
+[Sublime-Text-3]: https://talk.jekyllrb.com/
