--- a/_posts/2017-06-16-js-guifan.md
+++ b/_posts/2017-06-16-js-guifan.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "JavaSctipt 模块化"
+title:  "JavaScript 模块化"
 date:   2017-06-16 12:00:10 +0800
-categories: javasctipt
+categories: javascript
 tags: 模块化
 ---
 
